--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "npm run build && vite preview"
+    "start": "npm run build && node server.js"
   },
   "devDependencies": {
     "typescript": "^5.0.2",
