--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
   "dependencies": {
     "express": "^4.18.2",
     "sass": "^1.69.4",
+    "stylelint-config-standard-scss": "^11.1.0",
     "uuid": "^9.0.1",
-    "vite-plugin-handlebars": "^1.6.0",
-    "stylelint-config-standard-scss": "^11.1.0"
+    "vite-plugin-checker": "^0.6.2",
+    "vite-plugin-eslint": "^1.8.1",
+    "vite-plugin-handlebars": "^1.6.0"
   }
 }
