--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,11 @@
     "sourceMap": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true
   },
+
+      
   "include": ["src", "types.d.ts"]
 }
